fix(global): fix feature's z-index error

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -50,6 +50,11 @@ $animation-time: 0.3s;
 $animation-time-quick: 0.15s;
 $transition-time: 0.2s;
 
+// Z-Index
+$modal-z-index: 2018; // modal-mask: 2017
+$loading-z-index: 2019;
+$notice-z-index: 2020;
+
 // Icon
 $icon-small-width: 16px;
 $icon-small-height: 16px;
